--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -15,46 +14,46 @@
         android:gravity="start">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="301dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="start">
+            android:gravity="start"
+            android:orientation="vertical">
 
             <EditText
                 android:id="@+id/et_product_id"
-                android:layout_width="292dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:hint="Id:"
                 android:paddingHorizontal="5dp"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/et_product_name"
-                android:layout_width="292dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:hint="Product Name:"
                 android:paddingHorizontal="5dp"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/et_product_category"
-                android:layout_width="292dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:hint="Category:"
                 android:paddingHorizontal="5dp"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <EditText
                 android:id="@+id/et_product_price"
-                android:layout_width="292dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:hint="Price:"
                 android:paddingHorizontal="5dp"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
         </LinearLayout>
 
@@ -65,7 +64,7 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@id/btn_product_add"
+                android:id="@+id/btn_product_add"
                 android:layout_width="75dp"
                 android:layout_height="match_parent"
                 android:text="Add"
@@ -73,7 +72,7 @@
                 android:layout_marginTop="10dp"/>
 
             <Button
-                android:id="@id/btn_product_list"
+                android:id="@+id/btn_product_list"
                 android:layout_width="75dp"
                 android:layout_height="match_parent"
                 android:text="List"
@@ -85,6 +84,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
 
 </LinearLayout>
